jellyfin/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellyfin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jellyfin
  template:
    metadata:
      labels:
        app: jellyfin
    spec:
      containers:
        - name: jellyfin
          image: jellyfin/jellyfin:latest
          ports:
            - containerPort: 8096
          volumeMounts:
            - mountPath: /config
              name: config
            - mountPath: /data
              name: data
          resources:
            requests:
              cpu: "500m"    # Request half of a CPU core
              memory: "1Gi"  # Request 1 GiB of memory
            limits:
              cpu: "1000m"   # Limit to 1 CPU core
              memory: "2Gi"  # Limit to 2 GiB of memory
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: nfs-config-pvc
        - name: data
          persistentVolumeClaim:
            claimName: nfs-pvc
